--- a/index0.html
+++ b/index0.html
@@ -32,7 +32,9 @@
 
     <style>
       .showcase {
-        background:url(img/showcase.jpg) no-repeat center center;
+        background:url(img/showcase1.jpg) no-repeat center center;
+
+
         background-size: cover;
       }
 
@@ -118,9 +120,9 @@
         <img src="http://eastbayfrontrunners.org/img/ebfrw_logo.png">
       </div>
       <div class="container">
-        <h1>Custom Bootstrap Wordpress Theme</h1>
-        <p>Some cool text'</p>
-        <a href="#about" class="btn btn-primary btn-lg">Get Started</a>
+        <h1>EBFRW</h1>
+        <p>WE RUN, WALK, EAT, AND HAVE FUN</p>
+        <a href="#about" class="btn btn-primary btn-lg">TELL ME MORE<br><span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span></a>
       </div>
     </section>
   </div>
