adding styles, images for front page

--- a/index_withcode_code.html
+++ b/index_withcode_code.html
@@ -155,7 +155,7 @@
         <h1><span>EAST BAY FRONT RUNNERS AND WALKERS</span></h1>
         <p><span>WE RUN, WALK, EAT, AND HAVE FUN</span></p>
 
-        <!-- <a href="#about" class="btn btn-warning btn-lg"><span style='font-size:40px;' class="glyphicon glyphicon-menu-down" aria-hidden="true"></span></a> -->
+        <a href="#about" class="btn btn-warning btn-lg"><span style='font-size:40px;' class="glyphicon glyphicon-menu-down" aria-hidden="true"></span></a>
       </div>
     </section>
   </div>
