--- a/index_current.html
+++ b/index_current.html
@@ -51,7 +51,7 @@
         font-weight: bolder;
       }
       .bg-grey {
-           background-color: #f6f6f6;
+           /*background-color: #f6f6f6;*/
        }
     </style>
 
@@ -106,9 +106,9 @@
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
           <ul class="nav navbar-nav">
-            <li><a href="#about">about us</a></li>
-            <li><a href="#saturday_run">SATURDAY RUN</a></li>
-            <li><a href="#activities">THINGS WE DO</a></li>
+            <li><a href="#about">WHO WE ARE</a></li>
+            <!-- <li><a href="#saturday_run">SATURDAY RUN</a></li> -->
+            <li><a href="#activities">WHAT WE DO</a></li>
             <li><a href="#priderun">Pride Run</a></li>
             <li><a href="#membership">Membership</a></li>
             <li><a href="#boardmembers">Board Members</a></li>
@@ -122,11 +122,11 @@
       </div>
     </nav>
 
-    <section class="showcase">
+    <section class="showcase" style='margin-bottom:0px;'>
       <div class="container-fluid" >
         <h1>E.B.F.R.W</span></h1>
-        <h3>EAST BAY FRONT RUNNERS AND WALKERS</h3>
-        <h3>WE RUN, WALK, EAT, AND HAVE FUN</h3>
+        <!-- <h3>EAST BAY FRONT RUNNERS AND WALKERS</h3> -->
+        <h3 style='margin-top:-10px;'>RUN. WALK. EAT. BE HEALTHY. HAVE FUN</h3>
         <br>
         <a href="#about" class="btn btn-danger btn-lg">ABOUT US<BR>
             <!-- <span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span> -->
@@ -135,19 +135,33 @@
     </section>
   </div>
 
+  <!-- <div class="container-fluid bg-grey" style='padding:0px 0px;color:white;'>
+    <div class="row text-center bg-primary" style='padding:10px;'>
+      <div class="col-sm-4">
+        <h4 style='margin-bottom:0px;color:white;'>EAST BAY FRONT RUNNERS AND WALKERS</h4>
+      </div>
+      <div class="col-sm-4">
+        <h4 style='margin-bottom:0px;'>WE RUN. WE WALK. WE HAVE FUN.</h4>
+      </div>
+      <div class="col-sm-4">
+        <h4 style='margin-bottom:0px;'>Next Saturday Run is @ Lake Merrit</h4>
+      </div>
+    </div>
+  </div> -->
+
   <div id="about" class="container">
       <div class="row">
-        <div class="col-sm-6" >
+        <div class="col-sm-5" >
           <h2>Who are we?</h2>
-          <h2>a running club. nonprofit. <br>in the San Francisco/Oakland Bay area.</h2>
+          <h3>a running club. nonprofit. <br>located in the San Francisco/Oakland Bay area.</h3>
           <!-- <p class="text-uppercase">We are a nonprofit<strong style="color:#941a85;"> running club</strong> located in the San Francisco/Oakland Bay area.</p> -->
-          <p>Our Motto: <strong>Exercise. Have Fun!</strong><p/>
-          <p><strong>Our Mission</strong>: Promote running and walking for the LGBTA community.</p>
-          <p>We meet on the east side of San Francisco Bay every <strong style="color:#941a85;">Saturday</strong> morning at <strong style="color:#941a85;">9:00 AM</strong>. Distances range between 3-7 miles for runners and 2-4 miles for walkers.</p>
-          <p>We take pride in being friendly and inviting. ANYONE is welcome. <strong style="color:#941a85;">Join us this weekend!</strong></p>
+          <p><strong>Our Motto:</strong> Exercise. Be Healthy. Have Fun!<p/>
+          <p><strong>Our Mission</strong>: Promote running and walking for the LGBTA community. ANYONE is welcome.</p>
+          <p><strong>Where do we meet?</strong> On the east side of San Francisco Bay every <strong style="color:#941a85;">Saturday</strong> morning at <strong style="color:#941a85;">9:00 AM</strong>. Distances range between 3-7 miles for runners and 2-4 miles for walkers.</p>
+          <p><strong style="color:#941a85;">Join us this weekend!</strong></p>
           <a href="#contact" class="btn btn-default btn-lg">Get In touch</a>
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-7">
           <div class="row">
             <!-- <div class="col-sm-12">
               <img class="img-rounded img-thumbnail img-responsive" src="img/collage.jpg">
@@ -181,17 +195,16 @@
       </div>
     </div>
 
-    <div id="saturday_run" class="jumbotron text-center slideanim">
-      <h3>JOIN US THIS COMING SATURDAY. WE WILL BE AT...</h3>
-      <h1><strong>LAKE MERRIT</strong></h1>
-      <button class="btn btn-default">Directions</button>
+    <div id="saturday_run" class="jumbotron text-center">
+      <h2>OUR NEXT SATURDAY RUN AND WALK IS @ <span style='color:#fff'>LAKE MERRIT</span>
+      <a href-"#" class="btn btn-warning">&nbsp;<i class="fa fa-envelope" aria-hidden="true"></i>&nbsp; Directions</i></a></h2>
     </div>
 
-    <div id="activities" class="container-fluid text-center bg-grey">
+    <div id="activities" class="container-fluid text-center bg-grey slideanim">
       <h2>What we do</h2>
       <!-- <h4>Lots of Fun things</h4> -->
       <br />
-      <div class="row slideanim">
+      <div class="row ">
         <div class="col-sm-4">
           <i class="fa fa-calendar logo-small" aria-hidden="true"></i>
           <h4>SATURDAY RUNS</h4>
@@ -317,11 +330,11 @@
     </div>
 
     <div class="jumbotron text-center slideanim">
-      <h3>"We want to have have fun, promote lifelong health and fitness, and to create community and camaraderie"</h3>
+      <h2>"We want to have have fun, promote lifelong health and fitness, and to create community and camaraderie"</h2>
     </div>
 
     <div id="contact" class="container-fluid bg-grey">
-      <h2 class="text-center">CONTACT</h2>
+      <h2 class="text-center">h2.CONTACT</h2>
       <div class="row slideanim">
     	<div class="col-sm-5">
     	  <p>Contact us and we'll get back to you within 24 hours.</p>
@@ -361,11 +374,11 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBtJenNLr3Pg0Dz7y5f6apjZKDuffsYf7E&callback=myMap"></script>
 
 
-    <footer class="blog-footer">
+    <footer class="blog-footer text-center">
       <p>
         <a href="#myPage" alt="Back to Top"><i class="fa fa-chevron-up" aria-hidden="true"></i></a>
       </p>
-      <p>&copy; 2017 EBFRW
+      <p>&copy; 2017 EBFRW</p>
     </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
