upating refrerence to img

--- a/index_current.html
+++ b/index_current.html
@@ -179,7 +179,7 @@
           <br />
           <div class="row">
             <div class="col-sm-4 col-md-6">
-              <img class="img-responsive" src="img/DSC8545.jpg">
+              <img class="img-responsive" src="img/DSC8545.JPG">
             </div>
             <div class="col-sm-4 col-md-6">
               <img class="img-responsive" src="http://eastbayfrontrunners.org/img/priderun/2015/IMG_7263.jpg">
@@ -191,7 +191,7 @@
               <img class="img-responsive" src="img/3.jpg">
             </div>
             <div class="col-sm-4 col-md-6">
-              <img class="img-responsive" src="img/DSC8535.jpg">
+              <img class="img-responsive" src="img/DSC8535.JPG">
             </div>
           </div>
         </div>
