add linked in, git, etc.

--- a/index.html
+++ b/index.html
@@ -92,8 +92,16 @@
       </div>
       <div class="col-sm-9">
         <ul>
-          <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</li>
-          <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</li>
+          <li>Have served as the team’s liaison with all other interfacing systems and direct Client product owners. By being the point of contact to our system, we have addressed inquiries faster, and better distributed tasks between teammates</li>
+          <li>Coded both front and back end pieces of new system using javascript, handlebars, Bootstrap, and Spring Rest technologies</li>
+          <li>Designed, Written, tested, and implemented RESTful Web services using Java Spring Web Services and Jersey JAX-RS API technology</li>
+          <li>Maintained and enhanced existing system’s Spring MVC and Spring WebFlow </li>
+          <li>Maintained existing Oracle database, and added new tables and SQL Stored Procedure</li>
+          <li>Responsible for implementation a new look and feel to the system. Added new CSS, JQuery, and updated system’s existing JSPs. The overall result was more user friendly and modern looking application</li>
+          <li>Participated in Agile design sessions and provided inputs and feedback on designs and solutions</li>
+          <li>Managed projects, wrote requirements,  estimated efforts and costs</li>
+          <li>Conducted technical interview of new java developers. Also, provided initial training to new hires.</li>
+          <li>Built reports pulling data from very complex Oracle DB schema </li>
         </ul>
       </div>
       <!--<div class="col-sm-4">-->
@@ -106,8 +114,10 @@
       </div>
       <div class="col-sm-9">
         <ul>
-          <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</li>
-          <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</li>
+          <li>Contributed to the development of a system using Java, JSP, VXML, and IVR technologies. New software increased system’s performance by 50%, eliminating the need of new hardware purchase, which saved the company a total $12M. Project was submitted for a CIO Award </li>
+          <li>Maintained Speech Enabled/IVR – Interactive Voice Response systems (call routing application) using Java, Jsp, Servlets, and VXML technologies</li>
+          <li>Managed projects throughout all phases of software cycle.Worked directly with clients and developers to ensure deadlines were met and quality of final product </li>
+          <li>Developed a new tool to create some of the required documentation for each of the new software components </li>        
         </ul>
       </div>
     </div>
@@ -117,8 +127,9 @@
       </div>
       <div class="col-sm-9">
         <ul>
-          <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</li>
-          <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</li>
+          <li>Created test plans, conditions, cases, scenarios and scripts based on client’s technical requirements </li>
+          <li>Facilitated daily meetings between System Test Team and 10 other development teams to discuss application defect status. Defect resolution time frame was decreased in average by 2 days;  Coordinated testing effort with offshore testing teams </li>
+          <li>Trained and mentored new employees with essential skills to improve performance and decrease learning curve. Application testers were usually able to perform their work with minimum supervision after 1 week</li>
         </ul>
       </div>
     </div>
@@ -182,6 +193,12 @@
         <p>I am available for hire. Give me a shout.</p>
         <p>
           <span class="glyphicon glyphicon-phone"></span> jovribeiro@gmail.com
+        </p>
+        <p>
+          <a href="https://github.com/jovinoribeiro" target="_blank">Github</a>
+        </p>
+        <p>
+          <a href="www.linkedin.com/in/jovinoribeiro" target="_blank">LinkedIn</a>
         </p>
         <p>
           <span class="glyphicon glyphicon-map-marker"></span> Rancho Mirage, CA
