--- a/index.html
+++ b/index.html
@@ -104,9 +104,6 @@
           <li>Built reports pulling data from very complex Oracle DB schema </li>
         </ul>
       </div>
-      <!--<div class="col-sm-4">-->
-      <!--  <span class="glyphicon glyphicon-user logo"></span>-->
-      <!--</div>-->
     </div>
     <div class="row">
       <div class="col-sm-3">
@@ -136,55 +133,6 @@
 
   </div>
 
-  <div class="container-fluid bg-grey" style='display:none;'>
-    <div class="row">
-      <div class="col-sm-4">
-        <span class="glyphicon glyphicon-heart logo"></span>
-      </div>
-      <div class="col-sm-8">
-        <h2>My Projects</h2>
-        <h4>Some of the things I have exploreds</h4>
-      </div>
-    </div>
-   
-  </div>
-
-  <div class="container-fluid" style='display:none;'>
-    <div class="row">
-      <div class="col-sm-12">
-        <h2>Things I believe!</h2>
-        <div id="myCarousel" class="carousel slide text-center" data-ride="carousel">
-
-          <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="acdtive"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-          </ol>
-
-          <div class="carousel-inner" role="listbox">
-            <div class="item active">
-              <h4>t’s not a bug – it’s an undocumented feature.<br><span style="font-style:normal;">(Anonymous)</span></h4>
-            </div>
-            <div class="item">
-              <h4>"You rock # 1"<br><span style="font-style:normal;">John Doe, VP</span></h4>
-            </div>
-            <div class="item">
-              <h4>"You rock # 2"<br><span style="font-style:normal;">John Doe, VP</span></h4>
-            </div>
-          </div>
-
-          <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
-        </div>
-      </div>
-    </div>
-  </div>
 
   <div class="container-fluid bg-grey" id='contact'>
     <h1 class="text-center">CONTACT</h1>
@@ -198,30 +146,13 @@
           <a href="https://github.com/jovinoribeiro" target="_blank">Github</a>
         </p>
         <p>
-          <a href="www.linkedin.com/in/jovinoribeiro" target="_blank">LinkedIn</a>
+          <a href="https://www.linkedin.com/in/jovinoribeiro" target="_blank">LinkedIn</a>
         </p>
         <p>
           <span class="glyphicon glyphicon-map-marker"></span> Rancho Mirage, CA
         </p>
       </div>
-      <div class="col-sm-7" style='display:none;'>
-        <div class="row">
-          <div class="col-sm-6 form-group">
-            <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
-          </div>
-          <div class="col-sm-6 form-group">
-            <input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
-          </div>
-        </div>
-        <textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5">
-        </textarea>
-        <br>
-        <div class="row">
-          <div class="col-sm-12 form-group">
-            <button class="btn btn-default pull-right" type="submit">Send</button>
-          </div>
-        </div>
-      </div>
+      
     </div>
   </div>
 
