--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <h2>Full-Stack Developer  and Product Manager</h2>
     <form class="form-line">
       <div class="input-group-btn">
-        <a href="#experience" class="btn btn-lg btn-success">Lean More&nbsp;&nbsp;&nbsp;<span id='learn-more' class="glyphicon glyphicon-arrow-right"></span></a>
+        <a href="#experience" class="btn btn-lg btn-success">More&nbsp;&nbsp;&nbsp;<span id='learn-more' class="glyphicon glyphicon-arrow-right"></span></a>
       </div>
     </form>
   </div>
